--- a/src/app/components/__base/title-bar/title-bar.component.scss
+++ b/src/app/components/__base/title-bar/title-bar.component.scss
@@ -1,5 +1,5 @@
 @import 'shared';
 
 :host > :not(:last-child) {
-  margin-right: app-spacer(2xs);
+  margin-right: app-spacer(2);
 }
